--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <h1>
-        "Tech-Bender | Tech-Blog"
+        Tech-Bender | Tech-Blog
     </h1>
     <body>
         <h2>About me</h2>
@@ -8,6 +8,10 @@
             I am a tech enthusiast who is discovering the thrill of puzzling through cybersecurity as well as self hosting services to reduce using some one else's computer (The Cloud)
         </p>
         <h2> What I'm working on</h2>
+        <p>
+            I'm working on my home lab utilizing ProxMox, TrueNas, and OpnSense. 
+            
+            6/2/24 I just brought my buffer bloat from a D to a A+ following the guide from https://www.youtube.com/watch?v=CX1M7CUoe2E
         
 
     </body>
